# RFTX_SOFTWARE

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  LICENSE.txt  QUICK_START_BUILD.md  README.md  RFTX_FLASHER.py  build.py  bump_version.py  main.py  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements.txt  rftx_gui.py
.github/: RELEASE_TEMPLATE.md
.github/workflows/: build-test.yml  release.yml
